QStyleSheet: fix typo in propertyNameForStandardPixmap for discard

The property name for SP_DialogDiscardButton is missing the 'dialog-'
prefix to match the property described in knownStyleHints.

Task-number: QTBUG-58674
Change-Id: Ie5b7412765e19defb3644d7cac2fe08bf8119a8d
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>